--- a/binutils-2.13/libiberty/Makefile.in
+++ b/binutils-2.13/libiberty/Makefile.in
@@ -222,11 +222,11 @@ $(TESTLIB): $(REQUIRED_OFILES) $(CONFIGURED_OFILES)
 	  $(REQUIRED_OFILES) $(CONFIGURED_OFILES)
 	$(RANLIB) $(TESTLIB)
 
-info: libiberty.info info-subdir
-install-info: install-info-subdir
-clean-info: clean-info-subdir
-dvi: libiberty.dvi dvi-subdir
-html: libiberty.html
+info:
+install-info:
+clean-info:
+dvi:
+html:
 
 TEXISRC = \
 	$(srcdir)/libiberty.texi \
